# wxML

./: .clang-format  CmakeLists.txt  addlib.sh  vcpkg.json  wxApp.code-workspace
cmake/: automate-vcpkg.cmake  folders.cmake  init.cmake  targets.cmake
docs/: Doxyfile
docs/html/: DataModel_8hh.html  DataModel_8hh_source.html  NN_8cc.html  NN_8hh.html  NN_8hh_source.html  activation_8cc.html  activation_8hh.html  activation_8hh_source.html  annotated.html  app_8cc.html  app_8hh.html  app_8hh_source.html  appleData_8hh_source.html  appleListControl_8cc.html  classActivationFunction-members.html  classActivationFunction.html  classAndresNeuralNetwork-members.html  classAndresNeuralNetwork.html  classMainFrame-members.html  classMainFrame.html  classMyApp-members.html  classMyApp.html  classReLUActivation-members.html  classReLUActivation.html  classSigmoidActivation-members.html  classSigmoidActivation.html  classUniformRandomDouble-members.html  classUniformRandomDouble.html  classUniformRandomInt-members.html  classUniformRandomInt.html  classVirtualListControl-members.html  classVirtualListControl.html  classes.html  classnet-members.html  classnet.html  classneuron-members.html  classneuron.html  csvListControl_8hh.html  csvListControl_8hh_source.html  dir_0602ed4dcaf83cb7517c6771d5f60249.html  (+37 more)
docs/latex/: DataModel_8hh.tex  DataModel_8hh_source.tex  NN_8cc.tex  NN_8hh.tex  NN_8hh_source.tex  activation_8cc.tex  activation_8hh.tex  activation_8hh_source.tex  annotated.tex  app_8cc.tex  app_8hh.tex  app_8hh_source.tex  appleData_8hh_source.tex  appleListControl_8cc.tex  classActivationFunction.eps  classActivationFunction.tex  classAndresNeuralNetwork.tex  classMainFrame.tex  classMyApp.tex  classReLUActivation.eps  classReLUActivation.tex  classSigmoidActivation.eps  classSigmoidActivation.tex  classUniformRandomDouble.tex  classUniformRandomInt.tex  classVirtualListControl.eps  classVirtualListControl.tex  classnet.tex  classneuron.tex  csvListControl_8hh.tex  csvListControl_8hh_source.tex  dir_0602ed4dcaf83cb7517c6771d5f60249.tex  dir_2a91760fefe8d5ad51a5f042a1166cf8.tex  dir_59898e49c4d38953b60757adb73bfcdb.tex  dir_79d36a7c18db8ad261363bd88a96e5ce.tex  dir_7c5b46e5c9fb3f4453a95d2d3b6e8f58.tex  dir_7ec278c1074b4dcc4f34f68585d32d15.tex  (+19 more)
lib/lstm/: CMakeLists.txt
lib/lstm/inc/: activation.hh  lstm.hh
lib/lstm/src/: lstm.cc
lib/old/nn/: CMakeLists.txt  neuron.cc  neuron.hh
lib/wxLayout/components/: CMakeLists.txt  DataModel.hh  appleData.hh  appleListControl.cc  csvListControl.hh  macros.hh  mainframe.cc  mainframe.hh
lib/wxLayout/components/inc/: csvlist.control.hh  datamodel.model.hh  macros.hh  main_frame.hh
lib/wxLayout/components/src/: datamodel.control.cc  main.frame.cc
models/: apple.csv
resources/: apple_qlty.csv
(+75 files in other folders)
